[metadata]
name = CameraHelper
version = 0.0.13
author = tanzi
author_email = tanzitxws@126.com
description = A package for cameras
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitee.com/NewEraTech/Python.Packages.CameraHelper
project_urls =
    Bug Tracker = https://gitee.com/NewEraTech/Python.Packages.CameraHelper/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = true
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    pypylon >= 1.7.4 # install by yourself when needed
    opencv-python >= 4.5.4 # install by yourself when needed
    pygrabber >= 0.1

[options.packages.find]
where = src